--- a/my-fitnes-planner-app/package.json
+++ b/my-fitnes-planner-app/package.json
@@ -22,11 +22,15 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "@popperjs/core": "^2.11.3",
     "@types/firebase": "^3.2.1",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.4",
+    "moment": "^2.29.1",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
+    "subsink": "^1.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -34,6 +38,7 @@
     "@angular-devkit/build-angular": "~12.2.9",
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
+    "@angular/localize": "^12.2.15",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
