--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node src/server.js",
-    "build": "ng build",
+    "start": "node server.js",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "compodoc": "npx compodoc -p tsconfig.doc.json",
@@ -12,13 +12,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~12.2.9",
-    "@angular/compiler-cli": "~12.2.0",
-    "typescript": "~4.3.5",
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.2.13",
+    "@angular/cli": "~12.2.9",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
+    "@angular/compiler-cli": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/fire": "^7.2.0",
     "@angular/forms": "~12.2.0",
@@ -30,12 +29,14 @@
     "@popperjs/core": "^2.11.3",
     "@types/firebase": "^3.2.1",
     "bootstrap": "^5.1.3",
+    "express": "^4.17.3",
     "firebase": "^9.6.4",
     "moment": "^2.29.1",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "subsink": "^1.0.2",
     "tslib": "^2.3.0",
+    "typescript": "~4.3.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
