--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@popperjs/core": "^2.11.3",
     "@types/firebase": "^3.2.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "express": "^4.17.3",
     "firebase": "^9.6.4",
     "moment": "^2.29.1",
