--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,10 @@
       }
     ]
   },
+  "firestore": {
+    "rules": "./firestore/firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
   "database": {
     "rules": "database.rules.json"
   }
