--- a/src/assets/appConfiguration/config.json
+++ b/src/assets/appConfiguration/config.json
@@ -1,3 +1,13 @@
 {
-  apiKey:string
+  "appName": "My Fitnes planner",
+  "firebase": {
+    "apiKey": "AIzaSyB13Ry7sDwuwa4h54rRspAJWN9G3miYzR0",
+    "authDomain": "fitness-tracker-app-4e775.firebaseapp.com",
+    "databaseURL": "https://fitness-tracker-app-4e775-default-rtdb.firebaseio.com",
+    "projectId": "fitness-tracker-app-4e775",
+    "storageBucket": "fitness-tracker-app-4e775.appspot.com",
+    "messagingSenderId": "222625821027",
+    "appId": "1:222625821027:web:0b9025c0c3416ef712e356",
+    "measurementId": "G-T6XN61VG35"
+  }
 }
