--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "@ngrx/effects": "^12.5.1",
     "@ngrx/store": "^12.5.1",
     "@popperjs/core": "^2.11.3",
     "@types/firebase": "^3.2.1",
